* Die Sache mit dem Logout.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@3 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/login.xhtml
+++ b/JEE6/FacesTest/WebContent/login.xhtml
@@ -19,6 +19,7 @@
 				<h:commandButton type="submit" value="#{msg['login.login']}" />
 				<h:commandButton type="reset" value="#{msg['login.clear']}" />
 			</h:panelGroup>
+			<h:link value="#{msg['logout.back']}" outcome="/index.xhtml"/>
 		</h:panelGrid>
 	</form>
 </h:body>
