--- a/JEE6/FacesTest/WebContent/out.xhtml
+++ b/JEE6/FacesTest/WebContent/out.xhtml
@@ -10,10 +10,6 @@
 	</h:head>
 	<h:body>
 		<h1>#{msg['logout.title']}</h1>
-		<h:form>
-			#{msg['logout.message']}
-			<h:commandButton value="#{msg['logout.logout']}" action="#{controller.logout()}" />
-			<h:commandButton value="#{msg['logout.back']}" action="/index.xhtml" />
-		</h:form>
+			<h:link value="#{msg['logout.back']}" outcome="/index.xhtml"/>
 	</h:body>
 </html>
