--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -32,6 +32,10 @@
 			</tr>
 			<tr>		
 				<td></td>
+				<td><h:commandButton value="#{msg['change.add']}" action="#{sessionInfo.add()}" /></td>
+			</tr>
+			<tr>		
+				<td></td>
 				<td><h:commandButton value="#{msg['change.change']}" action="#{sessionInfo.action()}" /></td>
 			</tr>
 		</table>
