--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -2,16 +2,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html">
 
-	<h:head>
-		<title>#{msg['change.title']}</title>
-	</h:head>
-	
-	<h:body>
-		<h1>#{msg['change.title']}</h1>
-		<h:form>
+<h:head>
+	<title>#{msg['change.title']}</title>
+</h:head>
+
+<h:body>
+	<h1>#{msg['change.title']}</h1>
+	<h:form>
 		<table>
 			<tr>
 				<td>#{msg['change.name']}</td>
@@ -20,25 +20,46 @@
 
 			<tr>
 				<td>#{msg['change.birth']}</td>
-				<td>
-					<h:inputText value="#{sessionInfo.user.birth}">
-						<f:convertDateTime pattern="dd.MM.yyyy"/>
-					</h:inputText>
-				</td>
+				<td><h:inputText value="#{sessionInfo.user.birth}">
+						<f:convertDateTime pattern="dd.MM.yyyy" />
+					</h:inputText></td>
 			</tr>
 			<tr>
 				<td>#{msg['change.changed']}</td>
 				<td>#{sessionInfo.user.changed}</td>
 			</tr>
-			<tr>		
+			<tr>
 				<td></td>
-				<td><h:commandButton value="#{msg['change.add']}" action="#{sessionInfo.add()}" /></td>
-			</tr>
-			<tr>		
-				<td></td>
-				<td><h:commandButton value="#{msg['change.change']}" action="#{sessionInfo.action()}" /></td>
+				<td><h:commandButton value="#{msg['change.change']}"
+						action="#{userHandler.change()}" /></td>
 			</tr>
 		</table>
-		</h:form>
-	</h:body>
+	</h:form>
+
+	<h:form>
+		<h:dataTable value="#{sessionInfo.user.addresses}" var="address">
+			<h:column>
+				<f:facet name="header">#{msg['change.address.street']}</f:facet>#{address.street}
+				</h:column>
+			<h:column>
+				<f:facet name="header">#{msg['change.address.plz']}</f:facet>#{address.plz}
+				</h:column>
+			<h:column>
+				<f:facet name="header">#{msg['change.address.location']}</f:facet>#{address.location}
+				</h:column>
+			<h:column>
+				<f:facet name="header" />
+				<h:commandLink value="#{msg['change.change']}"
+					action="#{userHandler.editAddress(address)}" />
+			</h:column>
+			<h:column>
+				<f:facet name="header" />
+				<h:commandLink value="#{msg['change.remove']}"
+					action="#{userHandler.removeAddress(address)}" />
+			</h:column>
+		</h:dataTable>
+		<h:commandButton value="#{msg['change.add']}"
+			action="#{userHandler.addAddress()}" />
+	</h:form>
+</h:body>
 </html>
