* Enums als Optionen für Select Boxes.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@12 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -11,6 +11,7 @@
 	
 	<h:body>
 		<h1>#{msg['address.title']}</h1>
+		<h:messages />
 		<h:form>
 			<table>
 				<tr>
@@ -25,6 +26,15 @@
 				<tr>
 					<td>#{msg['change.address.location']}</td>
 					<td><h:inputText value="#{addressHandler.address.location}" /></td>
+				</tr>
+				<tr>
+					<td>#{msg['change.address.option']}</td>
+					<td>
+						<h:selectOneMenu value="#{addressHandler.address.addressOption}">
+							<f:selectItems value="#{applicationController.addressOptionList}"
+								itemValue="#{option.type}" itemLabel="#{option.description}" var="option" />
+						</h:selectOneMenu>
+					</td>
 				</tr>
 				<tr>		
 					<td></td>
