* Selection Box funktioniert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@13 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -32,7 +32,7 @@
 					<td>
 						<h:selectOneMenu value="#{addressHandler.address.addressOption}">
 							<f:selectItems value="#{applicationController.addressOptionList}"
-								itemValue="#{option.type}" itemLabel="#{option.description}" var="option" />
+								itemValue="#{option}" itemLabel="#{option.description}" var="option" />
 						</h:selectOneMenu>
 					</td>
 				</tr>
