--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -25,7 +25,7 @@
 					</h:inputText></td>
 			</tr>
 			<tr>
-				<td>#{<u>msg</u>['change.changed']}</td>
+				<td>#{msg['change.changed']}</td>
 				<td>#{sessionInfo.user.changed}</td>
 			</tr>
 			<tr>
