* Converter gefällt mir jetzt als Inner Class besser.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@17 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -30,8 +30,8 @@
 				<tr>
 					<td>#{msg['change.address.option']}</td>
 					<td>
-						<h:selectOneMenu value="#{addressHandler.address.addressOption}">
-							<f:selectItems value="#{applicationController.addressOptionList}"
+						<h:selectOneMenu value="#{addressHandler.address.addressOption}" converter="#{addressHandler.testConverter}">
+							<f:selectItems value="#{addressHandler.addressOptionList}"
 								itemValue="#{option}" itemLabel="#{option.description}" var="option" />
 						</h:selectOneMenu>
 					</td>
