--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -31,7 +31,7 @@
 			<tr>
 				<td>#{msg['change.birth']}</td>
 				<td><h:inputText value="#{sessionInfo.user.birth}">
-						<f:convertDateTime pattern="dd.MM.yyyy" locale="#{applicationController.locale}" timeZone="#{applicationController.timezone}"/>
+						<f:convertDateTime pattern="dd.MM.yyyy"/>
 					</h:inputText>
 				</td>
 			</tr>
