--- a/JEE6/FacesTest/WebContent/index.xhtml
+++ b/JEE6/FacesTest/WebContent/index.xhtml
@@ -13,8 +13,8 @@
 		<h1>#{msg['start.title']}</h1>
 		#{msg['start.name']} #{controller.name}
 		<ul>
-			<li><h:link value="#{msg['start.change']}" outcome="/admin/change.xhtml" /></li>
-			<li><h:link value="#{msg['start.logout']}" outcome="/logout.xhtml" /></li>
+			<li><h:link value="#{msg.change}" outcome="/admin/change.xhtml" /></li>
+			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
 		</ul>
 	</h:body>
 </html>
