--- a/JEE6/FacesTest/WebContent/login.xhtml
+++ b/JEE6/FacesTest/WebContent/login.xhtml
@@ -17,9 +17,9 @@
 			<div />
 			<h:panelGroup>
 				<h:commandButton type="submit" value="#{msg['login.login']}" />
-				<h:commandButton type="reset" value="#{msg['login.clear']}" />
+				<h:commandButton type="reset" value="#{msg.clear}" />
 			</h:panelGroup>
-			<h:link value="#{msg['logout.back']}" outcome="/index.xhtml"/>
+			<h:link value="#{msg.back}" outcome="/index.xhtml"/>
 		</h:panelGrid>
 	</form>
 </h:body>
