* Umstellung auf LAZY fetch.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@22 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -52,7 +52,7 @@
 	<hr/>
 
 	<h:form>
-		<h:dataTable value="#{sessionInfo.user.addresses}" var="address">
+		<h:dataTable value="#{userHandler.addressList}" var="address">
 			<h:column>
 				<f:facet name="header">#{msg['change.address.street']}</f:facet>#{address.street}
 			</h:column>
