* Probeapplikation hübsch gemacht.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@23 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/index.xhtml
+++ b/JEE6/FacesTest/WebContent/index.xhtml
@@ -2,19 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html">
+		xmlns:ui="http://java.sun.com/jsf/facelets"      
+		xmlns:f="http://java.sun.com/jsf/core"      
+		xmlns:h="http://java.sun.com/jsf/html">
 
-	<h:head>
-		<title>#{msg['start.title']}</title>
-	</h:head>
-	
-	<h:body>
-		<h1>#{msg['start.title']}</h1>
-		#{msg['start.name']} #{controller.name}
+<ui:composition template="/layout.xhtml">
+	<ui:define name="title">#{msg['start.title']}</ui:define>
+	<ui:define name="content">
 		<ul>
 			<li><h:link value="#{msg.change}" outcome="/admin/change.xhtml" /></li>
 			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
 		</ul>
-	</h:body>
+	</ui:define>
+</ui:composition>
 </html>
