--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -2,52 +2,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html">
+		xmlns:ui="http://java.sun.com/jsf/facelets"      
+		xmlns:f="http://java.sun.com/jsf/core"      
+		xmlns:h="http://java.sun.com/jsf/html">
 
-	<h:head>
-		<title>#{msg['address.title']}</title>
-	</h:head>
-	
-	<h:body>
-		<h1>#{msg['address.title']}</h1>
-		<h:messages />
-		<h:form>
-			<table>
-				<tr>
-					<td>#{msg['change.address.street']}</td>
-					<td><h:inputText value="#{addressHandler.address.street}" /></td>
-				</tr>
-	
-				<tr>
-					<td>#{msg['change.address.plz']}</td>
-					<td><h:inputText value="#{addressHandler.address.plz}" /></td>
-				</tr>
-				<tr>
-					<td>#{msg['change.address.location']}</td>
-					<td><h:inputText value="#{addressHandler.address.location}" /></td>
-				</tr>
-				<tr>
-					<td>#{msg['change.address.active']}</td>
-					<td><h:selectBooleanCheckbox value="#{addressHandler.address.active}" /></td>
-				</tr>
-				<tr>
-					<td>#{msg['change.address.option']}</td>
-					<td>
-						<h:selectOneMenu value="#{addressHandler.address.addressOption}" converter="#{addressHandler.addressOptionConverter}">
-							<f:selectItems value="#{addressHandler.addressOptionList}"
-								itemValue="#{option}" itemLabel="#{option.description}" var="option" />
-						</h:selectOneMenu>
-					</td>
-				</tr>
-				<tr>		
-					<td></td>
-					<td>
-						<h:commandButton value="#{msg.change}" action="#{addressHandler.change()}" />
-						<h:commandButton value="#{msg.back}" action="change.xhtml" />
-					</td>
-				</tr>
-			</table>
-		</h:form>
-	</h:body>
+<ui:composition template="/layout.xhtml">
+	<ui:define name="title">#{msg['address.title']}</ui:define>
+	<ui:define name="content">
+		<h:messages layout="table" styleClass="error" />
+		<div class="box">
+			<h:form>
+				<table>
+					<tr>
+						<td>#{msg['change.address.street']}</td>
+						<td><h:inputText value="#{addressHandler.address.street}" /></td>
+					</tr>
+		
+					<tr>
+						<td>#{msg['change.address.plz']}</td>
+						<td><h:inputText value="#{addressHandler.address.plz}" /></td>
+					</tr>
+					<tr>
+						<td>#{msg['change.address.location']}</td>
+						<td><h:inputText value="#{addressHandler.address.location}" /></td>
+					</tr>
+					<tr>
+						<td>#{msg['change.address.active']}</td>
+						<td><h:selectBooleanCheckbox value="#{addressHandler.address.active}" /></td>
+					</tr>
+					<tr>
+						<td>#{msg['change.address.option']}</td>
+						<td>
+							<h:selectOneMenu value="#{addressHandler.address.addressOption}" converter="#{addressHandler.addressOptionConverter}">
+								<f:selectItems value="#{addressHandler.addressOptionList}"
+									itemValue="#{option}" itemLabel="#{option.description}" var="option" />
+							</h:selectOneMenu>
+						</td>
+					</tr>
+					<tr>		
+						<td></td>
+						<td>
+							<h:commandButton value="#{msg.change}" action="#{addressHandler.change()}" />
+							<h:commandButton value="#{msg.back}" action="change.xhtml" />
+						</td>
+					</tr>
+				</table>
+			</h:form>
+		</div>
+	</ui:define>
+</ui:composition>
 </html>
