--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -2,87 +2,89 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+		xmlns:ui="http://java.sun.com/jsf/facelets"      
+		xmlns:f="http://java.sun.com/jsf/core"
+		xmlns:h="http://java.sun.com/jsf/html">
 
-<h:head>
-	<title>#{msg['change.title']}</title>
-</h:head>
-
-<h:body>
-	<h1>#{msg['change.title']}</h1>
-	<h:messages />
-	<h:form>
-		<table>
-			<tr>
-				<td>#{msg['change.name']}</td>
-				<td><h:inputText value="#{sessionInfo.user.name}" /></td>
-			</tr>
-
-			<tr>
-				<td>#{msg['change.mail']}</td>
-				<td>
-					<h:inputText value="#{sessionInfo.user.mail}" validator="#{sessionInfo.validateMail}">
-						<f:validator validatorId="mailValidator"/>
-					</h:inputText>
-				</td>
-			</tr>
-
-			<tr>
-				<td>#{msg['change.birth']}</td>
-				<td><h:inputText value="#{sessionInfo.user.birth}">
-						<f:convertDateTime pattern="dd.MM.yyyy"/>
-					</h:inputText>
-				</td>
-			</tr>
-			<tr>
-				<td>#{msg['change.changed']}</td>
-				<td>#{sessionInfo.user.changed}</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td>
-					<h:commandButton value="#{msg.change}" action="#{userHandler.change()}" />
-					<h:commandButton value="#{msg.back}" action="/index.xhtml" />
-				</td>
-			</tr>
-		</table>
-	</h:form>
-
-	<hr/>
-
-	<h:form>
-		<h:dataTable value="#{userHandler.addressList}" var="address">
-			<h:column>
-				<f:facet name="header">#{msg['change.address.street']}</f:facet>#{address.street}
-			</h:column>
-			<h:column>
-				<f:facet name="header">#{msg['change.address.plz']}</f:facet>#{address.plz}
-			</h:column>
-			<h:column>
-				<f:facet name="header">#{msg['change.address.location']}</f:facet>#{address.location}
-			</h:column>
-			<h:column>
-				<f:facet name="header">#{msg['change.address.active']}</f:facet>
-				<h:outputText value="#{msg.yes}" rendered="#{address.active}" />
-				<h:outputText value="#{msg.no}" rendered="#{!address.active}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header">#{msg['change.address.option']}</f:facet>#{address.addressOption.description}
-			</h:column>
-			<h:column>
-				<f:facet name="header" />
-				<h:commandLink value="#{msg.change}"
-					action="#{userHandler.editAddress(address)}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header" />
-				<h:commandLink value="#{msg.remove}"
-					action="#{userHandler.removeAddress(address)}" />
-			</h:column>
-		</h:dataTable>
-		<h:commandButton value="#{msg['change.add']}"
-			action="#{userHandler.addAddress()}" />
-	</h:form>
-</h:body>
+<ui:composition template="/layout.xhtml">
+	<ui:define name="title">#{msg['change.title']}</ui:define>
+	<ui:define name="content">
+		<h:messages layout="table" styleClass="error" />
+		<div class="box">
+			<h:form>
+				<table>
+					<tr>
+						<td>#{msg['change.name']}</td>
+						<td><h:inputText value="#{sessionInfo.user.name}" /></td>
+					</tr>
+		
+					<tr>
+						<td>#{msg['change.mail']}</td>
+						<td>
+							<h:inputText value="#{sessionInfo.user.mail}" validator="#{sessionInfo.validateMail}">
+								<f:validator validatorId="mailValidator"/>
+							</h:inputText>
+						</td>
+					</tr>
+		
+					<tr>
+						<td>#{msg['change.birth']}</td>
+						<td><h:inputText value="#{sessionInfo.user.birth}">
+								<f:convertDateTime pattern="dd.MM.yyyy"/>
+							</h:inputText>
+						</td>
+					</tr>
+					<tr>
+						<td>#{msg['change.changed']}</td>
+						<td>#{sessionInfo.user.changed}</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>
+							<h:commandButton value="#{msg.change}" action="#{userHandler.change()}" />
+							<h:commandButton value="#{msg.back}" action="/index.xhtml" />
+						</td>
+					</tr>
+				</table>
+			</h:form>
+		</div>
+	
+		<h:form>
+			<h:dataTable
+					value="#{userHandler.addressList}" var="address"
+					styleClass="list" rowClasses="odd,even" columnClasses="left,right,left,center,left">
+				<h:column>
+					<f:facet name="header">#{msg['change.address.street']}</f:facet>#{address.street}
+				</h:column>
+				<h:column>
+					<f:facet name="header">#{msg['change.address.plz']}</f:facet>#{address.plz}
+				</h:column>
+				<h:column>
+					<f:facet name="header">#{msg['change.address.location']}</f:facet>#{address.location}
+				</h:column>
+				<h:column>
+					<f:facet name="header">#{msg['change.address.active']}</f:facet>
+					<h:outputText value="#{msg.yes}" rendered="#{address.active}" />
+					<h:outputText value="#{msg.no}" rendered="#{!address.active}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">#{msg['change.address.option']}</f:facet>#{address.addressOption.description}
+				</h:column>
+				<h:column>
+					<f:facet name="header" />
+					<h:commandLink value="#{msg.change}"
+						action="#{userHandler.editAddress(address)}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header" />
+					<h:commandLink value="#{msg.remove}"
+						action="#{userHandler.removeAddress(address)}" />
+				</h:column>
+			</h:dataTable>
+			<div class="space"/>
+			<h:commandButton value="#{msg['change.add']}"
+				action="#{userHandler.addAddress()}" />
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
