--- a/JEE6/FacesTest/WebContent/logout.xhtml
+++ b/JEE6/FacesTest/WebContent/logout.xhtml
@@ -2,18 +2,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html">
+		xmlns:ui="http://java.sun.com/jsf/facelets"      
+		xmlns:f="http://java.sun.com/jsf/core"      
+		xmlns:h="http://java.sun.com/jsf/html">
 
-	<h:head>
-		<title>#{msg['logout.title']}</title>
-	</h:head>
-	<h:body>
+<ui:composition template="/layout.xhtml">
+	<ui:define name="title">#{msg['logout.title']}</ui:define>
+	<ui:define name="content">
 		<h1>#{msg['logout.title']}</h1>
 		<h:form>
 			#{msg['logout.message']}
 			<h:commandButton value="#{msg.logout}" action="#{controller.logout(request)}" />
 			<h:commandButton value="#{msg.back}" action="/index.xhtml" />
 		</h:form>
-	</h:body>
+	</ui:define>
+</ui:composition>
 </html>
