* Beispiel-Servlet gebaut.  * Mail Injection vereinheitlicht.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@30 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -24,6 +24,7 @@
 							<h:inputText id="mail" value="#{sessionInfo.user.mail}" validator="#{sessionInfo.validateMail}">
 								<f:validator validatorId="mailValidator"/>
 							</h:inputText>
+							<h:commandButton value="#{msg.testmail}" action="#{sessionInfo.testMail()}" />
 						</td>
 					</tr>
 		
