* javax.mail.Session ist nicht serialisierbar und muss daher in eine    Stateless Session Bean.  * Datumsverbesserung.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@31 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -37,7 +37,11 @@
 					</tr>
 					<tr>
 						<td>#{msg['change.changed']}</td>
-						<td>#{sessionInfo.user.changed}</td>
+						<td>
+							<h:outputText value="#{sessionInfo.user.changed}">
+								<f:convertDateTime type="both"/>
+							</h:outputText>
+						</td>
 					</tr>
 					<tr>
 						<td></td>
