* Beispiel Applikation hat jetzt generierte Entity Beans.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@45 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -35,7 +35,7 @@
 						<td>
 							<h:selectOneMenu id="type" value="#{addressHandler.address.addressOption}" converter="#{addressHandler.addressOptionConverter}">
 								<f:selectItems value="#{addressHandler.addressOptionList}"
-									itemValue="#{option}" itemLabel="#{option.description}" var="option" />
+									itemValue="#{option}" itemLabel="#{msg[option.bundleKey]}" var="option" />
 							</h:selectOneMenu>
 						</td>
 					</tr>
