--- a/JEE6/FacesTest/WebContent/admin/change.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/change.xhtml
@@ -86,7 +86,7 @@
 					<h:outputText value="#{msg.no}" rendered="#{!address.active}" />
 				</h:column>
 				<h:column>
-					<f:facet name="header">#{msg['change.address.option']}</f:facet>#{address.addressOption.description}
+					<f:facet name="header">#{msg['change.address.option']}</f:facet>#{msg[address.addressOption.bundleKey]}
 				</h:column>
 				<h:column>
 					<f:facet name="header" />
