--- a/JEE6/FacesTest/WebContent/menu.xhtml
+++ b/JEE6/FacesTest/WebContent/menu.xhtml
@@ -6,13 +6,13 @@
 		xmlns:f="http://java.sun.com/jsf/core"      
 		xmlns:h="http://java.sun.com/jsf/html">
 
-<ui:composition template="/layout.xhtml">
-	<ui:define name="title">#{msg['start.title']}</ui:define>
-	<ui:define name="content">
-		<ul>
+	<h2>#{msg.menue}</h2>
+	<ul>
+		<li><h:link value="#{msg.main}"   outcome="/index.xhtml" /></li>
+		<ui:fragment rendered="#{sessionController.loggedIn}">
 			<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
-			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
-		</ul>
-	</ui:define>
-</ui:composition>
+			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml"/></li>
+		</ui:fragment>
+	</ul>
 </html>
+
