* Einige weitere Beispiele:    o PDF-Export hinzugefügt.    o Image Servlet in Hauptmenü eingehängt.    o Proxy Imaging eingefügt und in Hauptmenü eingehänt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@182 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/greece.xhtml
+++ b/JEE6/FacesTest/WebContent/greece.xhtml
@@ -7,14 +7,16 @@
 		xmlns:h="http://java.sun.com/jsf/html">
 
 <ui:composition template="/layout.xhtml">
-	<ui:define name="title">#{msg['start.title']}</ui:define>
+	<ui:define name="title">#{msg['greece.title']}</ui:define>
 	<ui:define name="content">
-		<ul>
-			<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
-			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
-			<li><h:link value="#{msg['image.title']}" outcome="/image.xhtml" /></li>
-			<li><h:link value="#{msg['greece.title']}" outcome="/greece.xhtml" /></li>
-		</ul>
+		<p>
+			<h:graphicImage value="/proxy/image?cam=parosWeb" />
+			<h:graphicImage value="/proxy/image?cam=parosSail"/>
+		</p>
+		<p>
+			<h:graphicImage value="/proxy/image?cam=naxos" />
+			<h:graphicImage value="/proxy/image?cam=santorini"/>
+		</p>
 	</ui:define>
 </ui:composition>
 </html>
