--- a/JEE6/FacesTest/WebContent/admin/index.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/index.xhtml
@@ -48,10 +48,11 @@
 						</td>
 					</tr>
 					<tr>
-						<td></td>
+						<td/>
 						<td>
 							<h:commandButton value="#{msg.change}" action="#{userHandler.change()}" />
 							<h:commandButton value="#{msg.back}" action="/index.xhtml" />
+							<h:commandButton value="#{msg.export}" action="#{userHandler.export()}" />
 						</td>
 					</tr>
 				</table>
