--- a/JEE6/FacesTest/WebContent/image.xhtml
+++ b/JEE6/FacesTest/WebContent/image.xhtml
@@ -9,12 +9,7 @@
 <ui:composition template="/layout.xhtml">
 	<ui:define name="title">#{msg['start.title']}</ui:define>
 	<ui:define name="content">
-		<ul>
-			<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
-			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
-			<li><h:link value="#{msg['image.title']}" outcome="/image.xhtml" /></li>
-			<li><h:link value="#{msg['greece.title']}" outcome="/greece.xhtml" /></li>
-		</ul>
+		<h:graphicImage value="/ImageServlet" />
 	</ui:define>
 </ui:composition>
 </html>
